# ruby-grpc-research

./: .gitignore  .tool-versions  Dockerfile  Gemfile  README.md  dip.yml  docker-compose.yml  k6_test_grpc.js  k6_test_http.js
client-app/: Gemfile  config.ru  metrics.rb
falcon/: Gemfile  config.ru  falcon.rb
go-grpc/: Dockerfile  go.mod  main.go
go-grpc/hello/: hello.pb.go
golang/: go.mod  go.sum  main.go
golang/hello/: hello_grpc.pb.go
grafana/provisioning/dashboards/: grpc_dashboard.json
griffin/: Gemfile  hello_services_pb.rb  server.rb
grpc/: Gemfile  grpc_monkey_patch.rb  server.rb  server_multi.rb
grpc_proxy/: Makefile  deployment.yaml  k6_test_grpc.js
grpc_proxy/falcon/: Dockerfile  Gemfile  config.ru  falcon.rb
grpc_proxy/gruf/: Dockerfile  Gemfile  server.rb
grpc_proxy/gruf/controllers/: greeter_controller.rb
grpc_proxy/gruf/pb/: hello_pb.rb
grpc_proxy/nginx/: Dockerfile
gruf/: Gemfile  server.rb
gruf/controllers/: greeter_controller.rb
nginx/: Dockerfile  nginx.conf
prometheus/: prometheus.yml
rust-tonic/: Cargo.toml  Dockerfile  build.rs
rust-tonic/src/: main.rs
shared/: fetch_data.rb
