[package]
name = "rust-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.12.3"
